tests/paczka2/big_fuzzy/12697908.err
Error in line 1: A311 A644 695,4
Error in line 3: A311 S500 60,7
Error in line 15: mU64qJ5oc7S A311 32,5
Error in line 23: XxJ6 A311 97,2
Error in line 24: XxJ6 S605 4,1
Error in line 25: XxJ6 S500 27,0
Error in line 31: A311 S500 56,1
Error in line 34: A311 A644 31,7
Error in line 58: mU64qJ5oc7S A311 7,6
Error in line 76: A311 A644 28,76
Error in line 74: mOMiVbMr S605 127,9
Error in line 77: mOMiVbMr A311 87,1
Error in line 79: A311 A644 140,4
Error in line 83: ywsiPD A644 74,43
Error in line 81: mOMiVbMr S605 66,7
Error in line 82: A311 A311 6,5
Error in line 84: mOMiVbMr S500 30,3
Error in line 87: XxJ6 A644 66,8
Error in line 88: ywsiPD A644 179,1
Error in line 90: FUF0GGcZ A644 29,2
Error in line 71: mU64qJ5oc7S S605 134,8
Error in line 131: XxJ6 S500 68,76
Error in line 132: FUF0GGcZ A644 69,0
Error in line 135: FUF0GGcZ S500 60,4
Error in line 141: XxJ6 S500 231,2
Error in line 139: ywsiPD A311 327,6
Error in line 130: MnyS83K A644 55,6
Error in line 145: mOMiVbMr A311 84,1
Error in line 147: mOMiVbMr A644 17,2
Error in line 152: mOMiVbMr A311 67,4
Error in line 146: MnyS83K S500 53,1
Error in line 173: ywsiPD S500 43,1
Error in line 190: MnyS83K S605 7,69
Error in line 170: XxJ6 S605 299,8
Error in line 195: FUF0GGcZ S605 15,5
Error in line 201: FUF0GGcZ A644 -1,9
Error in line 199: FUF0GGcZ A644 1,6
Error in line 200: A311 S500 3,2
Error in line 198: XxJ6 S500 793,2
Error in line 208: XxJ6 A644 30,7
Error in line 197: MnyS83K S605 3,6
Error in line 220: mU64qJ5oc7S A644 91,5
Error in line 225: mOMiVbMr S500 70,0
Error in line 218: MnyS83K A644 67,5
Error in line 231: FUF0GGcZ A644 34,5
Error in line 230: MnyS83K S500 89,4
Error in line 238: MnyS83K S605 91,{
Error in line 235: MnyS83K A644 71,2
